tests/expectations/compiler/function/standard_function_calls_transition_function_fail.out
<<<<<<< HEAD
DCE_ENABLED:
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
    --> compiler-test:5:19
     |
   5 |            return adder(a, b);
     |                   ^^^^^^^^^^^
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
    --> compiler-test:7:20
     |
   7 |             return subber(a, b);
     |                    ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
=======
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
>>>>>>> feat/cli-improvements
    --> compiler-test:5:19
     |
   5 |            return adder(a, b);
     |                   ^^^^^^^^^^^
Error [ETYC0372042]: A `constructor`, `function`, or `inline` can only call an `inline`.
    --> compiler-test:7:20
     |
   7 |             return subber(a, b);
     |                    ^^^^^^^^^^^^
